:sparkles: Modified the MainController and other classes to implement some functionnalities