@@ -5,6 +5,8 @@ import com.javaPlayer.project.model.entity.Song;
 import com.javaPlayer.project.model.entity.Artist;
 import org.junit.jupiter.api.*;
 import java.io.File;
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
@@ -23,51 +25,53 @@ class DAOPlaylistTest {
 
     @AfterEach
     void tearDown() {
-        // Nettoyer le fichier généré après chaque test
-        File file = new File("playlists.properties");
+        // Clean up the remaining file after each test
+        File file = new File(TEST_PSEUDO + "_playlists.properties");
+
         if (file.exists()) {
             file.delete();
         }
     }
 
-    // Petit utilitaire pour créer une liste de Song de test
+    // Script for creating a test Song list
     private List<Song> createSampleSongs() {
         List<Song> songs = new ArrayList<>();
-        songs.add(new Song(1, "Bohemian Rhapsody", new Artist(1, "Queen"), "Rock", 354, new Date()));
-        songs.add(new Song(2, "Imagine", new Artist(2, "John Lennon"), "Pop", 183, new Date()));
+        songs.add(new Song(1, "Bohemian Rhapsody", new Artist(1, "Queen"), "Rock", Duration.ofMinutes(3), LocalDateTime.now()));
+        songs.add(new Song(2, "Imagine", new Artist(2, "John Lennon"), "Pop", Duration.ofMinutes(2).plusSeconds(52), LocalDateTime.now()));
         return songs;
     }
 
     @Test
     void testAddAndGetPlaylist() {
-        daoPlaylist.getPlaylistsList().clear(); // <-- reset propre au début du test
+        daoPlaylist.getPlaylistsList().clear(); // Reset playlists list
 
-        Playlist playlist = new Playlist(1, "MyPlaylist", new ArrayList<>(createSampleSongs()));
+        Playlist playlist = new Playlist("MyPlaylist", new ArrayList<>(createSampleSongs()));
         daoPlaylist.addPlaylist(playlist);
 
         assertEquals(1, daoPlaylist.getPlaylistsList().size());
-        assertEquals("MyPlaylist", daoPlaylist.getPlaylistsList().get(0).getTitle());
+        assertEquals("MyPlaylist", daoPlaylist.getPlaylistsList().getFirst().getTitle());
     }
 
 
     @Test
     void testSaveAndLoadPlaylists() {
-        Playlist playlist = new Playlist(2, "SavedPlaylist", new ArrayList<>(createSampleSongs()));
+        Playlist playlist = new Playlist("SavedPlaylist", new ArrayList<>(createSampleSongs()));
         daoPlaylist.addPlaylist(playlist);
-        daoPlaylist.savePlaylistsToFile(playlist);
+        daoPlaylist.savePlaylistsToFile();
+        daoPlaylist.loadPlaylistsFromFile();
 
         DAOPlaylist newDaoPlaylist = new DAOPlaylist(TEST_PSEUDO);
         assertNotNull(newDaoPlaylist.getPlaylistsList());
         assertFalse(newDaoPlaylist.getPlaylistsList().isEmpty());
-        assertEquals("SavedPlaylist", newDaoPlaylist.getPlaylistsList().get(0).getTitle());
+        assertEquals("SavedPlaylist", newDaoPlaylist.getPlaylist(playlist.getTitle()).getTitle());
     }
 
     @Test
     void testRemovePlaylist() {
         daoPlaylist.getPlaylistsList().clear(); // <-- reset propre au début du test
 
-        Playlist playlist1 = new Playlist(3, "Playlist1", new ArrayList<>(createSampleSongs()));
-        Playlist playlist2 = new Playlist(4, "Playlist2", new ArrayList<>(createSampleSongs()));
+        Playlist playlist1 = new Playlist("Playlist1", new ArrayList<>(createSampleSongs()));
+        Playlist playlist2 = new Playlist("Playlist2", new ArrayList<>(createSampleSongs()));
 
         daoPlaylist.addPlaylist(playlist1);
         daoPlaylist.addPlaylist(playlist2);
@@ -75,12 +79,12 @@ class DAOPlaylistTest {
         daoPlaylist.removePlaylist("Playlist1");
 
         assertEquals(1, daoPlaylist.getPlaylistsList().size());
-        assertEquals("Playlist2", daoPlaylist.getPlaylistsList().get(0).getTitle());
+        assertEquals("Playlist2", daoPlaylist.getPlaylistsList().getFirst().getTitle());
     }
 
     @Test
     void testGetPlaylist() {
-        Playlist playlist = new Playlist(5, "SpecificPlaylist", new ArrayList<>(createSampleSongs()));
+        Playlist playlist = new Playlist("SpecificPlaylist", new ArrayList<>(createSampleSongs()));
         daoPlaylist.addPlaylist(playlist);
 
         Playlist found = daoPlaylist.getPlaylist("SpecificPlaylist");
@@ -92,5 +96,17 @@ class DAOPlaylistTest {
     void testGetPlaylist_NotFound() {
         Playlist found = daoPlaylist.getPlaylist("NonExistentPlaylist");
         assertNull(found);
+    }
+
+    @Test
+    void testClearPlaylistsData() {
+        Playlist playlist = new Playlist("MyPlaylist", new ArrayList<>(createSampleSongs()));
+
+        daoPlaylist.addPlaylist(playlist);
+        daoPlaylist.savePlaylistsToFile();
+        daoPlaylist.clearPlaylistsData();
+        daoPlaylist.loadPlaylistsFromFile();
+
+        assertTrue(daoPlaylist.getPlaylistsList().isEmpty());
     }
 }
